feat(documentation) : add swagger for docs'

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://fzrsahi:123@localhost:5434/movie_app?schema=public"
 JWT_SECRET="movieapp"
+DATABASE_URL="postgresql://postgres:fF4G4ag5Ea364fEEcbgaAD2C*5--*Da3@roundhouse.proxy.rlwy.net:42655/railway"
 SECRET_TOKEN="movieapp"
+PORT=3000
+SWAGGER_PATH=docs
