--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    
     "db:dev:down": "docker compose down",
     "db:dev:up": "docker compose up -d",
     "db:migrate": "npx prisma db push",
@@ -35,6 +34,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^4.16.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
