--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,13 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+#App
 JWT_SECRET="movieapp"
-DATABASE_URL="postgresql://postgres:fF4G4ag5Ea364fEEcbgaAD2C*5--*Da3@roundhouse.proxy.rlwy.net:42655/railway"
 SECRET_TOKEN="movieapp"
-PORT=3000
+PORT=3001
 SWAGGER_PATH=docs
+
+#Db
+DATABASE_URL=postgresql://fzrsahi:password@localhost:5432/movie-booking-app?schema=public
+POSTGRES_USER=fzrsahi
+POSTGRES_PASSWORD=password
+POSTGRES_DB=movie-booking-app
+RATE_LIMITER_TTL=60000
+RATE_LIMITER_LIMIT=50
