--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
-version: '3.8'
+version: '3.7'
+
 services:
-  dev-db:
-    image: postgres:alpine3.18
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - 5434:5432
+      - "${PORT}:3000"
     environment:
-      POSTGRES_USER: fzrsahi
-      POSTGRES_PASSWORD: 123
-      POSTGRES_DB: movie_app
+      - PORT
+      - SECRET_AUTH_KEY
+      - APP_MODE
+      - HIDE_POST_ENDPOINTS
+      - DATABASE_URL
